<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/about_app"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtAbout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/about_app_2" />

    <TextView
        android:id="@+id/txtDeveloperName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textColor="@color/purple_200"
        android:text="@string/develop_by_roela_apps"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/txtContactUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/contact_us_email"
        android:textColorLink="#888"
        android:textDirection="rtl"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txtApiCodebazan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/metro_map_source"
        android:textColorLink="#888"
        android:textSize="12sp" />

</LinearLayout>